<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".HomeScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:clipToPadding="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/home"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="179dp"
            tools:layout_editor_absoluteY="9dp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/veryUrgent"
                android:layout_width="197dp"
                android:layout_height="53dp"
                android:layout_marginStart="83dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/btn_rounded_not_filled_green"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/very_urgent"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="135dp"
                android:includeFontPadding="false"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="0dp"
                android:text="@string/name"
                android:textColor="@color/colorInputFormName"
                android:textSize="16.5sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="251dp"
                android:includeFontPadding="false"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="0dp"
                android:text="@string/desease"
                android:textColor="@color/colorInputFormName"
                android:textSize="16.5sp"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="362dp"
                android:includeFontPadding="false"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="0dp"
                android:text="@string/location"
                android:textColor="@color/colorInputFormName"
                android:textSize="16.5sp"
                app:layout_constraintStart_toStartOf="@+id/desease"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="479dp"
                android:includeFontPadding="false"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="0dp"
                android:text="@string/description_optional"
                android:textColor="@color/colorInputFormName"
                android:textSize="16.5sp"
                app:layout_constraintStart_toStartOf="@+id/desease"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="323dp"
                android:layout_height="48.5dp"
                android:layout_marginTop="172dp"
                android:background="@drawable/form_input"
                android:ems="10"
                android:hint="@string/your_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:letterSpacing="0.05"
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:textColor="@color/colorInputFormHint"
                android:textColorHint="@color/colorInputFormHint"
                android:textSize="14.5sp"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/deseaseInput"
                android:layout_width="0dp"
                android:layout_height="48.5dp"
                android:layout_marginTop="288dp"
                android:background="@drawable/form_input"
                android:ems="10"
                android:hint="@string/what_is_your_illness"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:letterSpacing="0.05"
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:textColor="@color/colorInputFormHint"
                android:textColorHint="@color/colorInputFormHint"
                android:textSize="14.5sp"
                app:layout_constraintEnd_toEndOf="@+id/nameInput"
                app:layout_constraintStart_toStartOf="@+id/nameInput"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/locationInput"
                android:layout_width="0dp"
                android:layout_height="48.5dp"
                android:layout_marginTop="401dp"
                android:background="@drawable/form_input"
                android:ems="10"
                android:hint="@string/where_your_location"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:letterSpacing="0.05"
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:textColor="@color/colorInputFormHint"
                android:textColorHint="@color/colorInputFormHint"
                android:textSize="14.5sp"
                app:layout_constraintEnd_toEndOf="@+id/deseaseInput"
                app:layout_constraintStart_toStartOf="@+id/deseaseInput"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="0dp"
                android:layout_height="87.3dp"
                android:layout_marginTop="514dp"
                android:background="@drawable/form_input"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/describe_here"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:letterSpacing="0.05"
                android:paddingLeft="22dp"
                android:paddingTop="19dp"
                android:paddingRight="22dp"
                android:paddingBottom="19dp"
                android:textSize="14.5sp"
                app:layout_constraintEnd_toEndOf="@+id/locationInput"
                app:layout_constraintStart_toStartOf="@+id/locationInput"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/request"
                android:layout_width="310dp"
                android:layout_height="53dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="638dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_rounded_green_borderless"
                android:letterSpacing="0.05"
                android:text="@string/request"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16.5sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>